--- a/Produse/Lipite/terase copy.html
+++ b/Produse/Lipite/terase copy.html
@@ -14,19 +14,21 @@
 
                 <div class="navbar">
                         <ul class="top-level-navbar">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Produse</a>
+                                <li><a href="../../index.html">Home</a></li>
+                                <li><a>Produse</a>
                                         <ul class="second-level-navbar">
-                                                <li><a href="#">Elemente lipite</a>
+                                                <li><a>Elemente lipite</a>
                                                         <ul class="third-level-navbar">
-                                                                <li><a href="#">Grinzi</a></li>
-                                                                <li><a href="#">Deking</a></li>
+                                                                <li><a href="../Lipite/grinzi.html">Grinzi pentru construcții și amenajări</a></li>
+                                                                <li><a href="../Lipite/fatada.html">Fațadă lemn</a></li>
+                                                                <li><a href="../Lipite/terase.html">Terase, decking</a></li>
+                                                                <li><a href="../Lipite/podele.html">Podele interior</a></li>
                                                         </ul>
                                                 </li>
                                                 <li><a href="#">Lemn rotund</a></li>
                                         </ul>
                                 </li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="../../contact.html">Contact</a></li>
                         </ul>
                 </div>
                 
