--- a/Produse/Lipite/grinzi.html
+++ b/Produse/Lipite/grinzi.html
@@ -40,7 +40,8 @@
                                         </div>
                                         <br>
                                         <hr class="thinhr">
-                                        <a href="../../images/salcamlipit.jpg" target="_blank"><img src="../../images/salcamlipit.jpg" alt="Salcâm lipit" class="centeredimage" width="400" height="400"></a>
+                                        <a href="../../images/salcam-lipit1.jpg" target="_blank"><img src="../../images/salcam-lipit1-thumbnail.jpg" alt="Salcâm lipit" class="image" width="325" height="183"></a>
+                                        <a href="../../images/salcam-lipit2.jpg" target="_blank"><img src="../../images/salcam-lipit2-thumbnail.jpg" alt="Salcâm lipit" class="image" width="325" height="183"></a>
                                         <hr class="thinhr">
                                         <div class="row">
                                                 <div class="column1">
