--- a/Produse/Lipite/fatada.html
+++ b/Produse/Lipite/fatada.html
@@ -40,7 +40,7 @@
                                         </div>
                                         <br>
                                         <hr class="thinhr">
-                                        <a href="../../images/fatadalipita.jpg" target="_blank"><img src="../../images/fatadalipita.jpg" alt="Fațadă salcâm" class="centeredimage" width="400" height="266"></a>
+                                        <a href="../../images/fatada-lipita1.jpg" target="_blank"><img src="../../images/fatada-lipita1-thumbnail.jpg" alt="Fațadă salcâm" class="image" width="325" height="183"></a>
                                         <hr class="thinhr">
                                         <div class="row">
                                                 <div class="column1">
