--- a/Produse/Lipite/terase.html
+++ b/Produse/Lipite/terase.html
@@ -39,9 +39,9 @@
                                                 <a href="./elementelipite.html">Elemente lipite din lemn </a>&#171; Podele terase (deking)
                                         </div>
                                         <br>
-                                        <a href="../../images/terasa-salcam1.jpg" target="_blank"><img src="../../images/terasa-salcam1-thumbnail.jpg" alt="Fațadă salcâm" class="image" width="325" height="183"></a>
-                                        <a href="../../images/terasa-salcam2.jpg" target="_blank"><img src="../../images/terasa-salcam2-thumbnail.jpg" alt="Fațadă salcâm" class="image" width="325" height="183"></a>
-                                        <a href="../../images/terasa-salcam3.jpg" target="_blank"><img src="../../images/terasa-salcam3-thumbnail.jpg" alt="Fațadă salcâm" class="image" width="325" height="183"></a>                                       
+                                        <a href="../../images/terasa-salcam1.jpg" target="_blank"><img src="../../images/terasa-salcam1-thumbnail.jpg" alt="Terasă salcâm" class="image" width="325" height="183"></a>
+                                        <a href="../../images/terasa-salcam2.jpg" target="_blank"><img src="../../images/terasa-salcam2-thumbnail.jpg" alt="Terasă salcâm" class="image" width="325" height="183"></a>
+                                        <a href="../../images/podea-salcam1.jpg" target="_blank"><img src="../../images/podea-salcam1-thumbnail.jpg" alt="Podea salcâm" class="image" width="325" height="183"></a>                                       
                                         <hr class="thinhr">
                                         <div class="row">
                                                 <div class="column1">
