--- a/index.html
+++ b/index.html
@@ -35,21 +35,22 @@
                 <div class="content-box">
                         <article>
                                 <div class="home">
-                                        <h1>Despre firmă</h1>
-                                        <p>Bazat în Ozun, județul Covasna</p>
+                                        <h1>Despre salcâm</h1>
+                                        <a href="./images/salcam-home.jpg" target="_blank"><img src="./images/salcam-home-thumbnail.jpg" alt="Salcâm" class="imagehome" width="225" height="454"></a>
+                                        <p>Salcâmul face parte din familia Fabacae, este un arbore melifer, cu tulpină înaltă și ramuri spinoase rare.</p>
+                                        <p>Fiind aclimatizat în America de Nord, Europa, Africa de Sud și Asia.</p>
+                                        <h2>Istoric</h2>
+                                        <p>Salcâmul provine de pe conintentul nord-american. Genul Robinia este numit după grădinarii regali francezi Jean Robin, care a introdus salcâmul în Europa în anul 1601.</p>
+                                        <h2>Proprietăți</h2>
+                                        <p>Salcâmul crește pe aproape orice tip de teren.</p>
+                                        <p>Are o rezistență bună la ger, iubește lumina, suportă seceta.</p>
+                                        <p>Are capacitatea de a fixa azotul din atmosferă, iar semințele își păstrează mulți ani capacitatea de germinare.</p>
+                                        <p>Are frunze compuse și flori albe, puternic mirositoare, iar fructele sunt brun roșcate.</p>
+                                        <p>Înflorește primăvara târziu, în luna mai-iunie.</p>
+                                        <p>Salcâmul trăiește în jur de 100 de ani și face parte din categoria arborilor cu lemn de esență tare, fiind greu, dur și deosebit de rezistent la umezeală.</p>
+                                        <p>Lemnul de salcâm este utilizat pentru diverse lucrări în aer liber și interior.</p>
                                 </div>
                         </article>
-
-                        <div class="row">
-                                <div class="column1">
-                                        <h2>Oszlop1</h2>
-                                        <p>Szoveg ide</p>
-                                </div>
-                                <div class="column2">
-                                        <h2>Oszlop2</h2>
-                                        <p>Szoveg ide</p>
-                                </div>
-                        </div>
                 </div>
 
                 <footer>
