Stylesheet fixes and titles corrections.

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html>
         <head>
                 <meta charset="utf-8">
-                <title>Producție și Prestări Alexander S.R.L.</title>
+                <title>Contact - Producție și Prestări Alexander S.R.L.</title>
                 <link rel="stylesheet" type="text/css" href="./stylesheet.css" media="screen">
         </head>
 
