--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
         <head>
                 <meta charset="utf-8">
-                <title>Pagină prinicpală - Producție și Prestări Alexander S.R.L.</title>
+                <title>Pagină principală - Producție și Prestări Alexander S.R.L.</title>
                 <link rel="stylesheet" type="text/css" href="./stylesheet.css" media="screen">
         </head>
 
