--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
                                         <p>Lemnul de salcâm este utilizat pentru diverse lucrări în aer liber și interior.</p>
                                 </div>
                         </article>
+                        <article>
+                                <div class="home">
+                                        <h1>Despre firmă</h1>
+                                </div>
+                        </article>
                 </div>
 
                 <footer>
