--- a/Produse/Lipite/podele.html
+++ b/Produse/Lipite/podele.html
@@ -4,7 +4,7 @@
         <head>
                 <meta charset="utf-8">
                 <title>Podele - Producție și Prestări Alexander S.R.L.</title>
-                <link rel="stylesheet" type="text/css" href="../../stylesheet.css" media="screen">
+                <link rel="stylesheet" type="text/css" href="../../Style/stylesheet.css" media="screen">
         </head>
 
         <body>
