Content updates and bugfixes.

--- a/Produse/Lipite/terase.html
+++ b/Produse/Lipite/terase.html
@@ -15,9 +15,9 @@
                 <div class="navbar">
                         <ul class="top-level-navbar">
                                 <li><a href="../../index.html"><img src="../../images/home.png" width="16" height="16"> Home</a></li>
-                                <li><a>Produse</a>
+                                <li><a href="#">Produse</a>
                                         <ul class="second-level-navbar">
-                                                <li><a>Elemente lipite</a>
+                                                <li><a href="#">Elemente lipite</a>
                                                         <ul class="third-level-navbar">
                                                                 <li><a href="../Lipite/grinzi.html">Grinzi pentru construcții și amenajări</a></li>
                                                                 <li><a href="../Lipite/fatada.html">Fațadă lemn</a></li>
@@ -28,6 +28,7 @@
                                                 <li><a href="#">Lemn rotund</a></li>
                                         </ul>
                                 </li>
+                                <li><a href="../../catalogue.html">Catalog</a></li>
                                 <li><a href="../../contact.html">Contact</a></li>
                         </ul>
                 </div>
@@ -62,7 +63,7 @@
                                                 </div>
                                                 <div class="column2">
                                                         <ul class="list">
-                                                                <li>Lungime: la cerere pâna la 6m.</li>
+                                                                <li>Lungime: la cerere pâna la 6 metri.</li>
                                                                 <li>Secțiuni:
                                                                         <ul>
                                                                                 <li>23x60</li>
