--- a/catalogue.html
+++ b/catalogue.html
@@ -12,23 +12,37 @@
                         <a href="./index.html"><img id="logo" src="./images/logo2.png" alt="logo"></a>
                 </div>
 
-                <div class="navigationbar">
-                        <a href="./index.html"><img src="./images/home.png" width="16" height="16"></a>
-                        <div class="dropdown">
-                                <button class="dropbutton">Produse <small>&or;</small></button>
-                                <div class="dropdown-content">
-                                        <a href="./Produse/Lipite/elementelipite.html">Elemente lipite din lemn</a>
-                                        <a href="./Produse/Rotunde/lemnrotund.html">Lemn rotund</a>
-                                </div>
-                        </div>
-                        <a href="./catalogue.html">Catalog</a>
-                        <a href="./contact.html">Contact</a>
+                <div class="navbar">
+                        <ul class="top-level-navbar">
+                                <li><a href="./index.html"><img src="./images/home.png" width="16" height="16"> Home</a></li>
+                                <li><a href="#">Produse</a>
+                                        <ul class="second-level-navbar">
+                                                <li><a href="#">Elemente lipite</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="./Produse/Lipite/grinzi.html">Grinzi pentru construcții și amenajări</a></li>
+                                                                <li><a href="./Produse/Lipite/fatada.html">Fațadă lemn</a></li>
+                                                                <li><a href="./Produse/Lipite/terase.html">Terase, decking</a></li>
+                                                                <li><a href="./Produse/Lipite/podele.html">Podele interior</a></li>
+                                                        </ul>
+                                                </li>
+                                                <li><a href="#">Lemn rotund</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="./Produse/Rotunde/constructiisiamenajari.html">Lemn pentru construcții și amenajări exterioare</a></li>
+                                                        </ul>
+                                                </li>
+                                        </ul>
+                                </li>
+                                <li><a href="./catalogue.html">Catalog</a></li>
+                                <li><a href="./contact.html">Contact</a></li>
+                        </ul>
                 </div>
                 
                 <div class="content-box">
                         <article>
-                                <div class="catalogue">
+                                <div class="content">
                                         <h1>Catalog de produse</h1>
+                                        <a href="./Documents/Catalog.pdf"><img src="images/catalog.png" width="180px" height="255px" style="margin:auto"></a>
+                                        <p>Dați click pe copertă pentru descărcarea catalogului.</p>
                                 </div>
                         </article>
                 </div>
