--- a/index.html
+++ b/index.html
@@ -25,18 +25,36 @@
                                                                 <li><a href="./Produse/Lipite/podele.html">Podele interior</a></li>
                                                         </ul>
                                                 </li>
-                                                <li><a href="#">Lemn rotund</a></li>
+                                                <li><a href="#">Lemn rotund</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="./Produse/Rotunde/constructiisiamenajari.html">Lemn pentru construcții și amenajări exterioare</a></li>
+                                                        </ul>
+                                                </li>
                                         </ul>
                                 </li>
+                                <li><a href="./catalogue.html">Catalog</a></li>
                                 <li><a href="./contact.html">Contact</a></li>
                         </ul>
                 </div>
                 
                 <div class="content-box">
                         <article>
-                                <div class="home">
-                                        <h1>Despre salcâm</h1>
-                                        <a href="./images/salcam-home.jpg" target="_blank"><img src="./images/salcam-home-thumbnail.jpg" alt="Salcâm" class="imagehome" width="225" height="454"></a>
+                                <div class="content">
+                                        <h1>Despre firmă</h1>
+                                        <p style="margin-left:24px">...</p>
+                                </div>
+                        </article>
+
+                        <div class="content">
+                                <br>
+                                <h1>Materiale lemnoase folosit de firma noastră:</h1>
+                                <br>
+                        </div>
+
+                        <article>
+                                <div class="content">
+                                        <a href="./images/salcam-home.jpg" target="_blank"><img src="./images/salcam-home-thumbnail.jpg" alt="Salcâm" class="imagehomeleft" width="225" height="454"></a>
+                                        <h2>Salcâmul:</h2>
                                         <p>Salcâmul face parte din familia Fabacae, este un arbore melifer, cu tulpină înaltă și ramuri spinoase rare.</p>
                                         <p>Fiind aclimatizat în America de Nord, Europa, Africa de Sud și Asia.</p>
                                         <h2>Istoric</h2>
@@ -49,11 +67,12 @@
                                         <p>Înflorește primăvara târziu, în luna mai-iunie.</p>
                                         <p>Salcâmul trăiește în jur de 100 de ani și face parte din categoria arborilor cu lemn de esență tare, fiind greu, dur și deosebit de rezistent la umezeală.</p>
                                         <p>Lemnul de salcâm este utilizat pentru diverse lucrări în aer liber și interior.</p>
+                                        <br>
                                 </div>
                         </article>
                         <article>
-                                <div class="home">
-                                        <h1>Despre firmă</h1>
+                                <div class="content">
+                                        <h2>Stejarul:</h2>
                                 </div>
                         </article>
                 </div>
