--- a/Produse/Lipite/fatada.html
+++ b/Produse/Lipite/fatada.html
@@ -25,7 +25,11 @@
                                                                 <li><a href="../Lipite/podele.html">Podele interior</a></li>
                                                         </ul>
                                                 </li>
-                                                <li><a href="#">Lemn rotund</a></li>
+                                                <li><a href="#">Lemn rotund</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="../Rotunde/lemnrotundpentruconstructii.html">Lemn pentru construcții și amenajări exterioare</a></li>
+                                                        </ul>
+                                                </li>
                                         </ul>
                                 </li>
                                 <li><a href="../../catalogue.html">Catalog</a></li>
