--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                         <article>
                                 <div class="content">
                                         <h2>Stejarul:</h2>
+                                        <p>Stejarul ...</p>
                                 </div>
                         </article>
                 </div>
