--- a/Produse/Rotunde/lemnrotundpentruconstructii.html
+++ b/Produse/Rotunde/lemnrotundpentruconstructii.html
@@ -43,17 +43,40 @@
                                         <div class="sitenav">
                                                 <a href="./lemnrotund.html">Lemn rotund </a>&#171; Lemn pentru construcții și amenajări exterioare
                                         </div>
+                                        <br>
                                         <hr class="thinhr">
                                         <h2>Domeniu de utilizare:</h2>
-                                        <ul class="list">
-                                                <li>Garduri</li>
-                                        </ul>
+                                                <ul class="list">
+                                                        <li>Construcții și amenajări locuri de joacă pentru copii</li>
+                                                        <li>Garduri și împrejmuiri</li>
+                                                        <li>Pavaje</li>
+                                                        <li>Pereți susținere</li>
+                                                        <li>Construcții din lemn rotund</li>
+                                                </ul>
                                         <hr class="thinhr">
-                                        <h2>Material:</h2>
-                                        <ul class="list">
-                                                <li>Salcâm</li>
-                                                <li>Stejar</li>
-                                        </ul>
+                                        <h2>Tip:</h2>
+                                                <ul class="list">
+                                                        <li>cu coajă</li>
+                                                        <li>fără coajă</li>
+                                                        <li>șlefuit</li>
+                                                        <li>fără alburn și șlefuit</li>
+                                                        <li>frezat</li>
+                                                </ul>
+                                        <hr class="thinhr">
+                                        <h2>Dimensiuni:</h2>
+                                                <ul class="list">
+                                                        <li>Lemnul se livrează la dimensiunile cerute de client.</li>
+                                                        <li>de la &#8960;6cm până la &#8960;70cm.
+                                                        </li>
+                                                </ul>
+                                        <hr class="thinhr">
+                                        <h2>Material folosit:</h2>
+                                                <ul class="list">
+                                                        <li>Salcâm</li>
+                                                        <li>Stejar</li>
+                                                        <li>Rășinoase</li>
+                                                </ul>
+                                        <hr class="thinhr">     
                                 </div>
                         </article>
                 </div>
