--- a/Produse/Lipite/grinzi.html
+++ b/Produse/Lipite/grinzi.html
@@ -47,6 +47,7 @@
                                         <hr class="thinhr">
                                         <a href="../../images/salcam-lipit1.jpg" target="_blank"><img src="../../images/salcam-lipit1-thumbnail.jpg" alt="Salcâm lipit" class="image" width="325" height="183"></a>
                                         <a href="../../images/salcam-lipit2.jpg" target="_blank"><img src="../../images/salcam-lipit2-thumbnail.jpg" alt="Salcâm lipit" class="image" width="325" height="183"></a>
+                                        <a href="../../images/salcam-lipit3.jpg" target="_blank"><img src="../../images/salcam-lipit3-thumbnail.jpg" alt="Grindă lipită" class="image" width="325" height="183"></a>
                                         <hr class="thinhr">
                                         <div class="row">
                                                 <div class="column1">
