--- a/Produse/Lipite/podele.html
+++ b/Produse/Lipite/podele.html
@@ -45,6 +45,8 @@
                                         </div>
                                         <br>
                                         <hr class="thinhr">
+                                        <a href="../../images/podea-salcam2.png" target="_blank"><img src="../../images/podea-salcam2.png" alt="Podea din salcâm" class="image" width="325" height="183"></a>
+                                        <hr class="thinhr">
                                         <div class="row">
                                                 <div class="column1">
                                                         <h2>Domeniu de utilizare:</h2>
