--- a/catalogue.html
+++ b/catalogue.html
@@ -41,7 +41,7 @@
                         <article>
                                 <div class="content">
                                         <h1>Catalog de produse</h1>
-                                        <a href="./Documents/Catalog.pdf"><img src="images/catalog.png" width="180px" height="255px" style="margin:auto"></a>
+                                        <a href="./Documents/Catalog.pdf"><img src="images/catalog.png" width="180px" height="255px" style="padding-left: 64px;margin:auto"></a>
                                         <p>Dați click pe copertă pentru descărcarea catalogului.</p>
                                 </div>
                         </article>
