--- a/index.html
+++ b/index.html
@@ -5,6 +5,117 @@
                 <meta charset="utf-8">
                 <title>Pagină principală - Producție și Prestări Alexander S.R.L.</title>
                 <link rel="stylesheet" type="text/css" href="./Style/stylesheet.css" media="screen">
+                <style>
+                        * {
+                                box-sizing: border-box
+                        }
+
+                        .mySlides {
+                                display: none
+                        }
+
+                        img {
+                                vertical-align: middle;
+                        }
+
+                        .slideshow-container {
+                                max-width: 400px;
+                                position: relative;
+                                margin: auto;
+                                box-shadow: 2px 4px 16px 2px #081c15;
+                        }
+
+                        /* Next & previous buttons */
+                        .prev,
+                        .next {
+                                cursor: pointer;
+                                position: absolute;
+                                top: 50%;
+                                width: auto;
+                                padding: 16px;
+                                margin-top: -22px;
+                                color: #fffaec;
+                                font-weight: bold;
+                                font-size: 18px;
+                                transition: 0.6s ease;
+                                border-radius: 0 3px 3px 0;
+                                user-select: none;
+                        }
+                        /* Position the "next button" to the right */
+                        .next {
+                                right: 0;
+                                border-radius: 3px 0 0 3px;
+                        }
+                        /* On hover, add a black background color with a little bit see-through */
+                        .prev:hover,
+                        .next:hover {
+                                background-color: #081c15;
+                        }
+                        /* Caption text */
+                        .text {
+                                color: #fffaec;
+                                font-size: 15px;
+                                padding: 8px 12px;
+                                position: absolute;
+                                bottom: 8px;
+                                width: 100%;
+                                text-align: center;
+                        }
+                        /* Number text (1/3 etc) */
+                        .numbertext {
+                                color: #fffaec;
+                                font-size: 12px;
+                                padding: 8px 12px;
+                                position: absolute;
+                                top: 0;
+                        }
+                        /* The dots/bullets/indicators */
+                        .dot {
+                                cursor: pointer;
+                                height: 15px;
+                                width: 15px;
+                                margin: 0 2px;
+                                background-color: #2d6a4f;
+                                border-radius: 50%;
+                                display: inline-block;
+                                transition: background-color 0.6s ease;
+                        }
+                        .active,
+                        .dot:hover {
+                                background-color: #081c15;
+                        }
+                        /* Fading animation */
+                        .fade {
+                                -webkit-animation-name: fade;
+                                -webkit-animation-duration: 1.5s;
+                                animation-name: fade;
+                                animation-duration: 1.5s;
+                        }
+                        @-webkit-keyframes fade {
+                          from {
+                            opacity: .4
+                          }
+                          to {
+                            opacity: 1
+                          }
+                        }
+                        @keyframes fade {
+                          from {
+                            opacity: .4
+                          }
+                          to {
+                            opacity: 1
+                          }
+                        }
+                        /* On smaller screens, decrease text size */
+                        @media only screen and (max-width: 300px) {
+                                .prev,
+                                .next,
+                                .text {
+                                font-size: 11px
+                          }
+                        }
+                      </style>
         </head>
 
         <body>
@@ -38,6 +149,66 @@
                 </div>
                 
                 <div class="content-box">
+                        <div class="slideshow-container">
+                                <div class="mySlides fade">
+                                        <div class="numbertext">1 / 3</div>
+                                        <img src="./images/salcam-lipit1.jpg" style="width:400px">
+                                        <div class="text">Salcâm lipit</div>
+                                </div>
+
+                                <div class="mySlides fade">
+                                        <div class="numbertext">2 / 3</div>
+                                        <img src="./images/salcam-lipit2.jpg" style="width:400px">
+                                        <div class="text">Salcâm lipit</div>
+                                </div>
+
+                                <div class="mySlides fade">
+                                        <div class="numbertext">3 / 3</div>
+                                        <img src="./images/salcam-lipit3.jpg" style="width:400px">
+                                        <div class="text">Salcâm lipit</div>
+                                </div>
+
+                                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+                        </div>
+                        <br>
+                        <div style="text-align: center;">
+                                <span class="dot" onclick="currentSlide(1)"></span>
+                                <span class="dot" onclick="currentSlide(2)"></span>
+                                <span class="dot" onclick="currentSlide(3)"></span>
+                        </div>
+
+                        <script>
+                                var slideIndex = 1;
+                                showSlides(slideIndex);
+                                function plusSlides(n) {
+                                        showSlides(slideIndex += n);
+                                }
+                                function currentSlide(n) {
+                                        showSlides(slideIndex = n);
+                                }
+                                function showSlides(n) {
+                                        var i;
+                                        var slides = document.getElementsByClassName("mySlides");
+                                        var dots = document.getElementsByClassName("dot");
+                                        if(n > slides.length) {
+                                        slideIndex = 1
+                                        }
+                                        if(n < 1) {
+                                        slideIndex = slides.length
+                                        }
+                                        for(i = 0; i < slides.length; i++) {
+                                        slides[i].style.display = "none";
+                                        }
+                                        for(i = 0; i < dots.length; i++) {
+                                        dots[i].className = dots[i].className.replace(" active", "");
+                                        }
+                                        slides[slideIndex - 1].style.display = "block";
+                                        dots[slideIndex - 1].className += " active";
+                                }
+                        </script>
+
                         <article>
                                 <div class="content">
                                         <h1>Despre firmă</h1>
