--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                         }
 
                         .slideshow-container {
-                                max-width: 400px;
+                                max-width: 600px;
                                 position: relative;
-                                margin: auto;
+                                margin: 0;
                                 box-shadow: 2px 4px 16px 2px #081c15;
                         }
 
@@ -93,18 +93,18 @@
                         }
                         @-webkit-keyframes fade {
                           from {
-                            opacity: .4
+                                opacity: .4
                           }
                           to {
-                            opacity: 1
+                                opacity: 1
                           }
                         }
                         @keyframes fade {
                           from {
-                            opacity: .4
+                                opacity: .4
                           }
                           to {
-                            opacity: 1
+                                opacity: 1
                           }
                         }
                         /* On smaller screens, decrease text size */
@@ -149,22 +149,31 @@
                 </div>
                 
                 <div class="content-box">
+
+                        <article>
+                                <div class="content">
+                                        <h1>Despre firmă</h1>
+                                        <p style="margin-left:24px">...</p>
+                                </div>
+                        </article>
+                        <hr class="thinhr">
+                        <h1>Galerie cu produse:</h1>
                         <div class="slideshow-container">
                                 <div class="mySlides fade">
                                         <div class="numbertext">1 / 3</div>
-                                        <img src="./images/salcam-lipit1.jpg" style="width:400px">
+                                        <img src="./images/salcam-lipit1.jpg" style="width:600px">
                                         <div class="text">Salcâm lipit</div>
                                 </div>
 
                                 <div class="mySlides fade">
                                         <div class="numbertext">2 / 3</div>
-                                        <img src="./images/salcam-lipit2.jpg" style="width:400px">
+                                        <img src="./images/salcam-lipit2.jpg" style="width:600px">
                                         <div class="text">Salcâm lipit</div>
                                 </div>
 
                                 <div class="mySlides fade">
                                         <div class="numbertext">3 / 3</div>
-                                        <img src="./images/salcam-lipit3.jpg" style="width:400px">
+                                        <img src="./images/salcam-lipit3.jpg" style="width:600px">
                                         <div class="text">Salcâm lipit</div>
                                 </div>
 
@@ -173,7 +182,7 @@
 
                         </div>
                         <br>
-                        <div style="text-align: center;">
+                        <div style="text-align: left; padding-left: 268px;">
                                 <span class="dot" onclick="currentSlide(1)"></span>
                                 <span class="dot" onclick="currentSlide(2)"></span>
                                 <span class="dot" onclick="currentSlide(3)"></span>
@@ -209,15 +218,9 @@
                                 }
                         </script>
 
-                        <article>
-                                <div class="content">
-                                        <h1>Despre firmă</h1>
-                                        <p style="margin-left:24px">...</p>
-                                </div>
-                        </article>
-
                         <div class="content">
                                 <br>
+                                <hr class="thinhr">
                                 <h1>Materiale lemnoase folosit de firma noastră:</h1>
                                 <br>
                         </div>
@@ -241,12 +244,14 @@
                                         <br>
                                 </div>
                         </article>
+                        <hr class="thinhr">
                         <article>
                                 <div class="content">
                                         <h2>Stejarul:</h2>
                                         <p>Stejarul ...</p>
                                 </div>
                         </article>
+                        <hr class="thinhr">
                 </div>
 
                 <footer>
