--- a/Produse/Rotunde/lemnrotund.html
+++ b/Produse/Rotunde/lemnrotund.html
@@ -9,7 +9,7 @@
 
         <body>
                 <div class="logo">
-                        <a href="../../index.html"><img id="logo" src="../../images/logo2.png" alt="logo"></a>
+                        <a href="../../index.html"><img id="logo" src="../../images/Logo3.png" alt="logo"></a>
                 </div>
 
                 <div class="navigationbar">
