--- a/Produse/Lipite/elementelipite.html
+++ b/Produse/Lipite/elementelipite.html
@@ -25,7 +25,16 @@
                                                                 <li><a href="../Lipite/podele.html">Podele interior</a></li>
                                                         </ul>
                                                 </li>
-                                                <li><a href="#">Lemn rotund</a></li>
+                                                <li><a href="#">Lemn rotund</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="../Rotunde/lemnrotundpentruconstructii.html">Lemn pentru construcții și amenajări exterioare</a></li>
+                                                        </ul>
+                                                </li>
+                                                <li><a href="#">Materiale</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="../../Materiale/salcam.html">Salcâm</a></li>
+                                                        </ul>
+                                                </li>
                                         </ul>
                                 </li>
                                 <li><a href="../../catalogue.html">Catalog</a></li>
@@ -71,7 +80,7 @@
                 </div>
 
                 <footer>
-                        <p><small>Copyright &copy; 2021 goliczaa</small></p>
+                        <p><small>Copyright &copy; 2021 galpar</small></p>
                 </footer>
         </body>
 </html>
