--- a/Produse/Rotunde/lemnrotundpentruconstructii.html
+++ b/Produse/Rotunde/lemnrotundpentruconstructii.html
@@ -30,6 +30,11 @@
                                                                 <li><a href="./lemnrotundpentruconstructii.html">Lemn pentru construcții și amenajări exterioare</a></li>
                                                         </ul>
                                                 </li>
+                                                <li><a href="#">Materiale</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="../../Materiale/salcam.html">Salcâm</a></li>
+                                                        </ul>
+                                                </li>
                                         </ul>
                                 </li>
                                 <li><a href="../../catalogue.html">Catalog</a></li>
@@ -45,44 +50,68 @@
                                         </div>
                                         <br>
                                         <hr class="thinhr">
-                                        <h2>Domeniu de utilizare:</h2>
-                                                <ul class="list">
-                                                        <li>Construcții și amenajări locuri de joacă pentru copii</li>
-                                                        <li>Garduri și împrejmuiri</li>
-                                                        <li>Pavaje</li>
-                                                        <li>Pereți susținere</li>
-                                                        <li>Construcții din lemn rotund</li>
-                                                </ul>
+                                        <div class="row">
+                                                <div class="column1">
+                                                        <h2>Domeniu de utilizare:</h2>
+                                                </div>
+                                                <div class="column2">
+                                                        <ul class="list">
+                                                                <li>Construcții și amenajări locuri de joacă pentru copii</li>
+                                                                <li>Garduri și împrejmuiri</li>
+                                                                <li>Pavaje</li>
+                                                                <li>Pereți susținere</li>
+                                                                <li>Construcții din lemn rotund</li>
+                                                        </ul>
+                                                </div>
+                                        </div>
                                         <hr class="thinhr">
-                                        <h2>Tip:</h2>
-                                                <ul class="list">
-                                                        <li>cu coajă</li>
-                                                        <li>fără coajă</li>
-                                                        <li>șlefuit</li>
-                                                        <li>fără alburn și șlefuit</li>
-                                                        <li>frezat</li>
-                                                </ul>
+                                        <div class="row">
+                                                <div class="column1">
+                                                        <h2>Tip:</h2>
+                                                </div>
+                                                <div class="column2">
+                                                        <ul class="list">
+                                                                <li>cu coajă</li>
+                                                                <li>fără coajă</li>
+                                                                <li>șlefuit</li>
+                                                                <li>fără alburn și șlefuit</li>
+                                                                <li>frezat</li>
+                                                        </ul>
+                                                </div>
+                                        </div>
                                         <hr class="thinhr">
-                                        <h2>Dimensiuni:</h2>
-                                                <ul class="list">
-                                                        <li>Lemnul se livrează la dimensiunile cerute de client.</li>
-                                                        <li>de la &#8960;6cm până la &#8960;70cm.
-                                                        </li>
-                                                </ul>
+                                        <div class="row">
+                                                <div class="column1">
+                                                        <h2>Dimensiuni:</h2>
+                                                </div>
+                                                <div class="column2">
+                                                        <ul class="list">
+                                                                <li>Lemnul se livrează la dimensiunile cerute de client.</li>
+                                                                <li>de la &#8960;6cm până la &#8960;70cm.
+                                                                </li>
+                                                        </ul>
+                                                </div>
+                                        </div>
                                         <hr class="thinhr">
-                                        <h2>Material folosit:</h2>
-                                                <ul class="list">
-                                                        <li>Salcâm</li>
-                                                        <li>Stejar</li>
-                                                        <li>Rășinoase</li>
-                                                </ul>
+                                        <div class="row">
+                                                <div class="column1">
+                                                        <h2>Material folosit:</h2>
+                                                </div>
+                                                <div class="column2">                                                        
+                                                        <ul class="list">
+                                                                <li>Salcâm</li>
+                                                                <li>Stejar</li>
+                                                                <li>Rășinoase</li>
+                                                        </ul>
+                                                </div>
+                                        </div>
                                         <hr class="thinhr">     
                                 </div>
                         </article>
                 </div>
 
                 <footer>
-                        <p><small>Copyright &copy; 2021 goliczaa</small></p>
+                        <p><small>Copyright &copy; 2021 galpar</small></p>
                 </footer>
         </body>
 </html>
