--- a/catalogue.html
+++ b/catalogue.html
@@ -30,6 +30,11 @@
                                                                 <li><a href="./Produse/Rotunde/lemnrotundpentruconstructii.html">Lemn pentru construcții și amenajări exterioare</a></li>
                                                         </ul>
                                                 </li>
+                                                <li><a href="#">Materiale</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="./Materiale/salcam.html">Salcâm</a></li>
+                                                        </ul>
+                                                </li>
                                         </ul>
                                 </li>
                                 <li><a href="./catalogue.html">Catalog</a></li>
@@ -48,7 +53,7 @@
                 </div>
 
                 <footer>
-                        <p><small>Copyright &copy; 2021 goliczaa</small></p>
+                        <p><small>Copyright &copy; 2021 galpar</small></p>
                 </footer>
         </body>
 </html>
