--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
         <body>
                 <div class="logo">
-                        <a href="./index.html"><img id="logo" src="./images/logo2.png" alt="logo"></a>
+                        <a href="./index.html"><img id="logo" src="./images/Logo3.png" alt="logo"></a>
                 </div>
 
                 <div class="navbar">
@@ -28,6 +28,12 @@
                                                 <li><a href="#">Lemn rotund</a>
                                                         <ul class="third-level-navbar">
                                                                 <li><a href="./Produse/Rotunde/lemnrotundpentruconstructii.html">Lemn pentru construcții și amenajări exterioare</a></li>
+                                                        </ul>
+                                                </li>
+
+                                                <li><a href="#">Materiale</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="./Materiale/salcam.html">Salcâm</a></li>
                                                         </ul>
                                                 </li>
                                         </ul>
@@ -63,7 +69,7 @@
                 </div>
 
                 <footer>
-                        <p><small>Copyright &copy; 2021 goliczaa</small></p>
+                        <p><small>Copyright &copy; 2021 galpar</small></p>
                 </footer>
         </body>
 </html>
