--- a/Produse/Rotunde/lemnrotund.html
+++ b/Produse/Rotunde/lemnrotund.html
@@ -4,7 +4,7 @@
         <head>
                 <meta charset="utf-8">
                 <title>Producție și Prestări Alexander S.R.L.</title>
-                <link rel="stylesheet" type="text/css" href="../../stylesheet.css" media="screen">
+                <link rel="stylesheet" type="text/css" href="../../Style/stylesheet.css" media="screen">
         </head>
 
         <body>
@@ -12,42 +12,70 @@
                         <a href="../../index.html"><img id="logo" src="../../images/Logo3.png" alt="logo"></a>
                 </div>
 
-                <div class="navigationbar">
-                        <a href="../../index.html"><img src="../../images/home.png" width="16" height="16"></a>
-                        <div class="dropdown">
-                                <button class="dropbutton">Produse <small>&or;</small></button>
-                                <div class="dropdown-content">
-                                        <a href="../Lipite/elementelipite.html">Elemente lipite din lemn</a>
-                                        <a href="./lemnrotund.html">Lemn rotund</a>
-                                </div>
-                        </div>
-                        <a href="../../catalogue.html">Catalog</a>
-                        <a href="../../contact.html">Contact</a>
+                <div class="navbar">
+                        <ul class="top-level-navbar">
+                                <li><a href="../../index.html"><img src="../../images/home.png" width="16" height="16"> Home</a></li>
+                                <li><a href="#">Produse</a>
+                                        <ul class="second-level-navbar">
+                                                <li><a href="#">Elemente lipite</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="../Lipite/grinzi.html">Grinzi pentru construcții și amenajări</a></li>
+                                                                <li><a href="../Lipite/fatada.html">Fațadă lemn</a></li>
+                                                                <li><a href="../Lipite/terase.html">Terase, decking</a></li>
+                                                                <li><a href="../Lipite/podele.html">Podele interior</a></li>
+                                                        </ul>
+                                                </li>
+                                                <li><a href="#">Lemn rotund</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="./lemnrotundpentruconstructii.html">Lemn pentru construcții și amenajări exterioare</a></li>
+                                                        </ul>
+                                                </li>
+                                                <li><a href="#">Materiale</a>
+                                                        <ul class="third-level-navbar">
+                                                                <li><a href="../../Materiale/salcam.html">Salcâm</a></li>
+                                                        </ul>
+                                                </li>
+                                        </ul>
+                                </li>
+                                <li><a href="../../catalogue.html">Catalog</a></li>
+                                <li><a href="../../contact.html">Contact</a></li>
+                        </ul>
                 </div>
                 
                 <div class="content-box">
                         <article>
                                 <div class="content">
+                                        <hr class="thinhr">
                                         <h1>Lemn rotund</h1>
+                                        <div class="row">
+                                                <div class="column1">
+                                                        <h2>Sortimente:</h2>
+                                                </div>
+                                                <div class="column2">
+                                                        <ul class="list">
+                                                                <li><a href="./lemnrotundpentruconstructii.html">Lemn pentru construcții și amenajări exterioare</a></li>
+                                                                <li><a href="./lemnrotundparc.html">Lemn pentru parcuri de joacă</a></li>
+                                                        </ul>
+                                                </div>
+                                        </div>
                                         <hr class="thinhr">
-                                        <h2>Sortimente:</h2>
-                                        <ul class="list">
-                                                <li><a href="./lemnrotundpentruconstructii.html">Lemn pentru construcții și amenajări exterioare</a></li>
-                                                <li><a href="./lemnrotundparc.html">Lemn pentru parcuri de joacă</a></li>
-                                        </ul>
-                                        <hr class="thinhr">
-                                        <h2>Material:</h2>
-                                        <p class="paragraphtab">Lemn din următoarele specii:</p>
-                                        <ul class="list">
-                                                <li>Salcâm</li>
-                                                <li>Stejar</li>
-                                        </ul>
+                                        <div class="row">
+                                                <div class="column1">
+                                                        <h2>Material:</h2>
+                                                </div>
+                                                <div class="column2">
+                                                        <ul class="list">
+                                                                <li>Salcâm</li>
+                                                                <li>Stejar</li>
+                                                        </ul>
+                                                </div>
+                                        </div>
                                 </div>
                         </article>
                 </div>
 
                 <footer>
-                        <p><small>Copyright &copy; 2021 goliczaa</small></p>
+                        <p><small>Copyright &copy; 2021 galpar</small></p>
                 </footer>
         </body>
 </html>
