Finishing up for publishing.

--- a/Produse/Lipite/elementelipite.html
+++ b/Produse/Lipite/elementelipite.html
@@ -63,10 +63,9 @@
                                         <hr class="thinhr">
                                         <div class="row">
                                                 <div class="column1">
-                                                        <h2>Material:</h2>
+                                                        <h2>Lemn din următoarele specii:</h2>
                                                 </div>
                                                 <div class="column2">
-                                                        <p class="paragraphtab">Lemn din următoarele specii:</p>
                                                         <ul class="list">
                                                                 <li>Salcâm</li>
                                                                 <li>Stejar</li>
