--- a/Produse/Lipite/terase.html
+++ b/Produse/Lipite/terase.html
@@ -46,7 +46,7 @@
                         <article>
                                 <div class="content">
                                         <div class="sitenav">
-                                                <a href="./elementelipite.html">Elemente lipite din lemn </a>&#171; Podele terase (deking)
+                                                <a href="./elementelipite.html" style="color: #fffaec">Elemente lipite din lemn </a>&#171; Podele terase (deking)
                                         </div>
                                         <br>
                                         <a href="../../images/terasa-salcam1.jpg" target="_blank"><img src="../../images/terasa-salcam1-thumbnail.jpg" alt="Terasă salcâm" class="image" width="325" height="183"></a>
