--- a/Produse/Rotunde/lemnrotundpentruconstructii.html
+++ b/Produse/Rotunde/lemnrotundpentruconstructii.html
@@ -46,7 +46,7 @@
                         <article>
                                 <div class="content">
                                         <div class="sitenav">
-                                                <a href="./lemnrotund.html">Lemn rotund </a>&#171; Lemn pentru construcții și amenajări exterioare
+                                                <a href="./lemnrotund.html" style="color: #fffaec">Lemn rotund </a>&#171; Lemn pentru construcții și amenajări exterioare
                                         </div>
                                         <br>
                                         <hr class="thinhr">
