--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                                                 </div>
                                                 <div class="column2">
                                                         <p>Producție și Prestări Alexander S.R.L.</p>
-                                                        <p>Ozun, Str. Sfântu Gheorghe nr. 231A</p>
+                                                        <p>Ozun, Str. Sfântu Gheorghe nr. 231/A</p>
                                                         <p>Covasna, România</p>
                                                         <br>
                                                         <p>Mobil: +40 730 960 200</p>
