--- a/Produse/Lipite/grinzi.html
+++ b/Produse/Lipite/grinzi.html
@@ -46,7 +46,7 @@
                         <article>
                                 <div class="content">
                                         <div class="sitenav">
-                                                <a href="./elementelipite.html">Elemente lipite din lemn </a>&#171; Grinzi pentru construcții și amenajări
+                                                <a href="./elementelipite.html" style="color: #fffaec">Elemente lipite din lemn </a>&#171; Grinzi pentru construcții și amenajări
                                         </div>
                                         <br>
                                         <hr class="thinhr">
