Fixes and updates

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                                                 </div>
                                                 <div class="column2">
                                                         <p>Producție și Prestări Alexander S.R.L.</p>
-                                                        <p>Ozun, Str. Sfântu Gheorghe nr. 231/A</p>
+                                                        <p>Ozun, Str.Sfântu Gheorghe nr.231/A</p>
                                                         <p>Covasna, România</p>
                                                         <br>
                                                         <p>Mobil: +40 730 960 200</p>
@@ -61,7 +61,9 @@
                                                 </div>
                                         </div>
                                 </div>
-
+                                <hr class="thinhr">
+                                <br>
+                                <h2>Ne găsiți pe Google Maps:</h2>
                                 <div class="map">
                                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20258.574969948535!2d25.83319210225322!3d45.800685445450206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa1e499450a061517!2sProduc%C8%9Bie%20%C8%99i%20Prest%C4%83ri%20Alexander%20SRL!5e0!3m2!1shu!2sro!4v1627639176193!5m2!1shu!2sro" width="600" height="450" style="border:0;margin:auto;" allowfullscreen="" loading="lazy"></iframe>
                                 </div>
