Hungarian content upload

--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
         </head>
 
         <body>
-                <div class="logo">
-                        <a href="./index.html"><img id="logo" src="./images/Logo3.png" alt="logo"></a>
+                <div class="top">
+                        <div class="languagebar">
+                                <ul style="list-style: none;">
+                                        <li style="display: inline;"><a href="./hu/index.html" style="color: #fffaec;">HU /</a></li>
+                                        <li style="display: inline;"><a href="./index.html" style="color: #fffaec;">RO /</a></li>
+                                </ul>
+                        </div>
+
+                        <div class="logo">
+                                <a href="./index.html"><img id="logo" src="./images/Logo3.png" alt="logo"></a>
+                        </div>
                 </div>
 
                 <div class="navbar">
@@ -43,8 +52,7 @@
                 </div>
                 
                 <div class="content-box">
-                        <div class="row">
-                                
+                        <div class="row"> 
                                 <div class="columngallery1">
                                         <h2>Galerie cu produse:</h1>
                                         <div class="slideshow-container">
