--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,17 @@
         </head>
 
         <body>
-                <div class="logo">
-                        <a href="./index.html"><img id="logo" src="./images/Logo3.png" alt="logo"></a>
+                <div class="top">
+                        <div class="languagebar">
+                                <ul style="list-style: none;">
+                                        <li style="display: inline;"><a href="./hu/index.html" style="color: #fffaec;">HU /</a></li>
+                                        <li style="display: inline;"><a href="./index.html" style="color: #fffaec;">RO /</a></li>
+                                </ul>
+                        </div>
+
+                        <div class="logo">
+                                <a href="./index.html"><img id="logo" src="./images/Logo3.png" alt="logo"></a>
+                        </div>
                 </div>
 
                 <div class="navbar">
